--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "unique-names-generator": "^4.7.1",
     "unique-username-generator": "^1.2.0"
   },
