--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "run": "node server.js",
-    "dev": "nodemon server.js",
+    "run": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "postinstall": "husky install"
   },
@@ -14,8 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
     "unique-names-generator": "^4.7.1",
     "unique-username-generator": "^1.2.0"
   },
